gccida/g3/reversed_comparison_code
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/jump.c:1228:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  reversed_comparison_code( rtx comparison, rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/jump.c:1230:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v2; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/jump.c:1233:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/jump.c:1239:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)comparison->fld[0]; 
                      ^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/jump.c:1243:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = *( ( _DWORD *)&mode_class_0 + *( unsigned __int8 *)( v4.rtwint + 2)); 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/jump.c:1280:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = *( ( _DWORD *)&mode_class_0 + *( unsigned __int8 *)( *( _QWORD *)&comparison[1] + 2LL)); 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/jump.c:1290:8: error: use of undeclared identifier 'CSWTCH_103'
return CSWTCH_103[v7]; 
       ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code/src/obj/jump.o] Error 1
